--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 4.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_VERBOSE_MAKEFILE ON) # to detect errors better
+set(CMAKE_BUILD_TYPE Release)
 project(
 	Conversation
 	VERSION 0.1.0
@@ -8,13 +9,16 @@ project(
 	LANGUAGES CXX
 	)
 
-include_directories("${PROJECT_SOURCE_DIR}/linking/include") # for 3rd party headers
+find_package(
+	FreeImage REQUIRED
+)
+ 
 
 add_executable(convo
 	src/main.cpp
 )
 
-# add 3rd party dynamic libraries for the linker | located inside "${PROJECT_SOURCE_DIR}/linking/lib"
 target_link_libraries(convo
-
+	PRIVATE
+	 freeimage::FreeImage
 )
